[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Options.gd" type="Script" id=1]
[ext_resource path="res://Sounds/menuMusic.wav" type="AudioStream" id=2]
[ext_resource path="res://Fonts/AcerSupplement-wOpZ.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 60.0
margin_bottom = 60.0

[node name="MasterVolume" type="HSlider" parent="VBoxContainer"]
margin_right = 160.0
margin_bottom = 32.0
rect_min_size = Vector2( 160, 32 )
min_value = -30.0
max_value = 0.0

[node name="MusicVolume" type="HSlider" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 160.0
margin_bottom = 68.0
rect_min_size = Vector2( 160, 32 )
min_value = -30.0
max_value = 0.0

[node name="EffectsVolume" type="HSlider" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 160.0
margin_bottom = 104.0
rect_min_size = Vector2( 160, 32 )
min_value = -30.0
max_value = 0.0

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
mix_target = 1
bus = "Music"

[node name="BackButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -100.0
margin_right = -20.0
margin_bottom = -20.0
custom_colors/font_color_disabled = Color( 0.407843, 0.392157, 0.392157, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "back"

[connection signal="value_changed" from="VBoxContainer/MasterVolume" to="." method="_on_MasterVolume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MasterVolume" to="." method="_on_Volume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/EffectsVolume" to="." method="_on_EffectsVolume_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_Button_pressed"]
